[package]
name = "hacktools"
version = "1.0.0"
authors = ["n0vA"]
edition = "2021"
description = "A suite library for Red Teams and Hacking consisting of functions for network scanning and web recon trying to get and see through security flaws and exploitation."
documentation = "https://docs.rs/hacktools"
repository = "https://github.com/pN0vA/hacktools"
readme = "README.md"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustscan = "2.1.1"
reqwest = {version ="0.11.18", features = ["blocking"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.102"}
memmap = {version = "0.7.0"}
colorized = {version = "1.0.0"}
open = {version = "5.0.0"}